
Fri Aug 2 21:15:42 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* reflection.c: fix encoding of named args for custom attrs to match
	the ms implementation. Read them back when instantiating custom
	attributes.

2002-08-02  Radek Doulik  <rodo@ximian.com>

	* marshal.c (mono_mb_add_data): convert ret value to LE, suggested
	by Dietmar as quick fix
	(mono_marshal_get_delegate_begin_invoke): use sig->param_count +
	16 as stack size, used on more places as quick fix before Dietmar
	will fix it properly

Fri Aug 2 17:48:17 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* object.h, object.c: added accessors for fields and properties.

Fri Aug 2 17:45:15 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* class.c, class.h: made mono_class_get_field_from_name ()
	loop on parent types.
	Added mono_class_get_property_from_name ().

Fri Aug 2 11:40:32 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* class.c, class.h: move the code to setup the type vtable in its own
	function so that it can be reused also for types created at runtime.
	Eliminate the "class" identifier from the header file.
	* reflection.c: setup the vtable for enums so that we can create
	objects for use in SetConstant ().

2002-08-02  Dietmar Maurer  <dietmar@ximian.com>

	* marshal.c (mono_delegate_to_ftnptr): pass delegate->target
	instead of the delegate itself as this pointer (bug #28383)

2002-08-01  Dietmar Maurer  <dietmar@ximian.com>

	* marshal.c (mono_marshal_get_managed_wrapper): added return type
	conversions.

Wed Jul 31 16:49:29 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* loader.c: don't set the pinvoke bit on icalls.

2002-07-31  Dietmar Maurer  <dietmar@ximian.com>

	* debug-helpers.c (mono_method_full_name): only print a number to
	indicate wrapper type (so that the output is more readable in traces).

2002-07-30  Dietmar Maurer  <dietmar@ximian.com>

	* class.c (mono_class_init): include method override patch from Paolo

Tue Jul 30 15:20:08 CEST 2002 Paolo Molaro <lupus@ximian.com>
